--- a/index.html
+++ b/index.html
@@ -5,7 +5,12 @@
     <link rel="icon" href="/academia.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ficha Academia</title>
-
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap"
+      rel="stylesheet"
+    />
     <!-- bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
