--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       crossorigin="anonymous"
     />
     <link rel="stylesheet" href="./font-awesome/css/font-awesome.min.css" />
+
+    <link rel="stylesheet" href="https://unpkg.com/vue-multiselect/dist/vue-multiselect.min.css" />
   </head>
   <body>
     <div id="app"></div>
@@ -24,5 +26,6 @@
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/vue-multiselect"></script>
   </body>
 </html>
